Removed the hiding of scrollbars, turned everything to overflow-y-auto, fixed horizontal scrolling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -500,10 +500,6 @@ input:disabled {
   color: #4a5568;
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
-
 iframe {
   display: none;
 }
